--- a/view/assets/css/the.css
+++ b/view/assets/css/the.css
@@ -4,8 +4,19 @@ html{
     
 }
 
+
+.the_gachchan{
+    border-bottom: 1px solid black;
+    padding: 0 10px;
+}
+
+input[type="text_the1"] {
+   
+  }
+
 /*CSS của căn chỉnh */
 .the_table-hienthi2{
+    width: 100% ;
     height: 100px;
     outline: auto;
     margin-top: 5px;
