con chuc nang sort!!

--- a/view/assets/css/thucPham.css
+++ b/view/assets/css/thucPham.css
@@ -90,15 +90,16 @@ table.tp__table--hienthi {
 }
 .tp__modal__div--popup {
     width: 500px;
+    position: relative;
     background-color: lightblue;
     height: 400px;
     border-radius: 20px;
 }
 .tp__modal__div--u{  
-    position: fixed;
+    position: absolute;
     font-size: 22px;
     margin-left: 20px;
-    top: 21%;
+    top: 3%;
 }
 table.tp__table--addform {
     margin-top: 94px;
