--- a/view/assets/css/nuoc.css
+++ b/view/assets/css/nuoc.css
@@ -90,15 +90,16 @@ table.nuoc__table--hienthi {
 }
 .nuoc__modal__div--popup {
     width: 500px;
+    position: relative;
     background-color: lightblue;
     height: 400px;
     border-radius: 20px;
 }
 .nuoc__modal__div--u{  
-    position: fixed;
+    position: absolute;
     font-size: 22px;
     margin-left: 20px;
-    top: 21%;
+    top: 3%;
 }
 table.nuoc__table--addform {
     margin-top: 94px;
