--- a/view/assets/css/dung_cu_tap.css
+++ b/view/assets/css/dung_cu_tap.css
@@ -7,12 +7,12 @@ html{
     clear: both;
 }
 
-li.menu-li.menu-li-nuoc {
+li.menu-li.menu-li-csvc {
     background-color: rgb(68, 84, 106);
 }
 
 /* css của sắp xếp */
-select.tp__select {
+select.dct__select {
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -22,7 +22,37 @@ select.tp__select {
     border-radius: 10px;
     background-color: #daeaf3;
 }
-input.tp--sort {
+.dct__form--search {
+    margin-top: 1.5%;
+    margin-right: 275px;
+}
+
+button.dct__input--search {
+    border: none;
+    background: white;
+    color: blue;
+    font-size: 17px;
+}
+
+.dct__div--search--sort {
+    float: right;
+    display: flex;
+}
+
+.dct__input--search {
+    height: 31px;
+    border: none;
+}
+
+.dct__form__div--search {
+    border-bottom: 2px groove;
+}
+
+input.dct__input--search {
+    width: 219px;
+}
+
+input.dct--sort {
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -34,55 +64,55 @@ input.tp--sort {
 }
 
 /* CSS của hiển thị */
-.tp__div--hienthi{
+.dct__div--hienthi{
     margin-top: 30px;
     width: 100%;
     border: 1px solid white;
 }
 
-.tp__table_row--hienthi{
+.dct__table_row--hienthi{
     height: 30px;
 }
 
-div tr.tp__table--Tieu_de {
+div tr.dct__table--Tieu_de {
     background-color: #4472C4;
 
 }
-.tp__modal__div--popup{
+.dct__modal__div--popup{
     width: 100%;
 }
-table.tp__table--hienthi {
+table.dct__table--hienthi {
     color: black;
     margin-top: 12px;
     width: 100%;
 }
 
-.tp__table--hienthi tr:nth-child(even) {
+.dct__table--hienthi tr:nth-child(even) {
     background-color: #E9EBF5;
   }
 
-.tp__table--hienthi tr:nth-child(odd) {
+.dct__table--hienthi tr:nth-child(odd) {
     background-color: #CFD5EA;
 }
 
-.tp__table--hienthi tr th.tp__table--pass_tap {
+.dct__table--hienthi tr th.dct__table--pass_tap {
     border: 1px solid #2F528F;
     border-radius: 10px;
     font-size: 20px;
     border-width: 5px;
     padding: 2px;
 }
-.tp__table--hienthi tr th.tp__table--pass_tap a {
+.dct__table--hienthi tr th.dct__table--pass_tap a {
     color: black;
     width: 100%;
 }
 
-.tp__table--hienthi tr th.tp__table--pass {
+.dct__table--hienthi tr th.dct__table--pass {
     background-color: white;
 }
 
 /* them--popup */
-.tp__modal--popup {
+.dct__modal--popup {
     top: 0;
     position: fixed;
     right: 0;
@@ -95,23 +125,23 @@ table.tp__table--hienthi {
     display: none;
 }
 
-.tp__modal--popup--open{
+.dct__modal--popup--open{
     display: flex;
 }
-.tp__modal__div--popup {
+.dct__modal__div--popup {
     width: 500px;
     position: relative;
     background-color: lightblue;
     height: 400px;
     border-radius: 20px;
 }
-.tp__modal__div--u{  
+.dct__modal__div--u{  
     position: absolute;
     font-size: 22px;
     margin-left: 20px;
     top: 3%;
 }
-table.tp__table--addform {
+table.dct__table--addform {
     margin-top: 76px;
     margin-left: auto;
     margin-right: auto;
@@ -119,7 +149,7 @@ table.tp__table--addform {
     background-color: lightblue;
     
 }
-.tp__table--add-button{
+.dct__table--add-button{
     padding: 5px;
     border: 1px solid #2F528F;
     border-width: 3px;
@@ -130,15 +160,15 @@ table.tp__table--addform {
     float: right;
     margin-top: 12px;
 }
-.tp__table--button_huy{
+.dct__table--button_huy{
     background-color: red;
 }
-.tp__table--add_input{
+.dct__table--add_input{
     height: 20px;
 }
 
 /* css của button thêm sửa xóa */
-.tp__div--button{
+.dct__div--button{
 
     padding: 5px;
     border: 1px solid #2F528F;
@@ -149,41 +179,40 @@ table.tp__table--addform {
    
 }
 
-.tp__div--chua_button{
+.dct__div--chua_button{
     position: fixed;
     bottom: 0;
     right: 0;
 }
-.tp__div--button_xoa{
+.dct__div--button_xoa{
     margin-right: 30px;
     background-color: red;
 }
 
-input.tp--page {
+input.dct--page {
     margin-left: 5px;
 }
 
-.tp__div--tap {
+.dct__div--tap {
     display: flex;
     margin-left: 7%;
 }
 
-li.nuoc__div {
+li.dct__div {
     border: 1px solid #2F528F;
     border-radius: 10px;
     font-size: 20px;
     border-width: 5px;
-    padding: 2px;
+    padding: 2px; 
     margin-right: 5px;
 }
-
-.tp__div--tnuoc{
-    background-color: #daeaf3;
-}
-.tp__div--ttpcn{
+.dct__div--dct{
     background-color: rgb(68, 84, 106);
 }
+.dct__div--tdd{
+    background-color: #daeaf3;
+}
 
-.tp__form--page{
+.dct__form--page{
     margin-top: 5px;
 }
