hoi vien update

--- a/view/assets/css/hoivien.css
+++ b/view/assets/css/hoivien.css
@@ -3,15 +3,23 @@
 }
 
 .main-hoivien {
-    width: 95%;
-    height: auto;
-    margin: 15px auto;
+    display: flex;
+    padding: 30px 50px 0 50px;
+    height: 560px;
+}
+/* animation */
+@keyframes growth {
+    from {
+        transform: scale(0.7);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 /* tim kiem hoi vien */
 .hoivien__search-view {
-    position: relative;
-    width: 250px;
-    height: 500px;
+    width: calc(100% - 83%);
+    height: 450px;
     border: 4px solid #2F528F;
     border-radius: 40px;
     float: left;
@@ -34,7 +42,6 @@
 
 .hoivien__search-input {
     display: flex;
-    
 }
 
 .hoivien__search-input input[type="text"] {
@@ -70,12 +77,12 @@
 .hoivien__table {
     position: relative;
     float: right;
-    width: 1170px;
+    width: calc(100% - 20%);
     border: 1px solid #2F528F;
     border-radius: 10px;
     font-size: 18px;
     border-width: 5px;
-    height: 550px;
+    margin-left: 30px;
 }
 .hoivien__table-view {
     width: 100%
@@ -112,12 +119,12 @@ div tr.hoivien__table-view--title {
     width: 15%; 
 }
 /* btn them sua xoa */
-.hoivien__AFD {
+.hoivien__AUD {
     position: absolute;
     bottom: 0;
     right: 0;
 }
-.hoivien__AFD-btn{ 
+.hoivien__AUD-btn{ 
     padding: 10px;
     border: 1px solid #2F528F;
     border-width: 5px;
@@ -127,11 +134,90 @@ div tr.hoivien__table-view--title {
     font-size: 21px;
     font-weight: 600;
 }
-.hoivien__AFD-btn:hover {
+.hoivien__AUD-btn:hover ,
+.hoivien__table-add-btn:hover {
     cursor: pointer;
     opacity: 0.8;
 }
-.hoivien__AFD-btn-del {
+.hoivien__AUD-btn-del {
     margin-right: 30px;
     background-color: red;
+}
+/* popup hoi vien */
+.hoivien__modal-popup {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.hoivien__modal-popup-open {
+    display: flex;
+}
+.hoivien__modal-popup-overlay {
+    position: relative;
+    width: 500px;
+    height: 400px;
+    background-color: lightblue;
+    border-radius: 30px;
+    border: 5px solid #2F528F;
+    animation: growth linear 0.2s;
+}
+.hoivien__modal-popup-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    height: 50px;
+}
+.hoivien_addform {
+    margin: auto;
+}
+.hoivien__table-add-input {
+    height: 30px;
+    width: 200px;
+    padding: 5px 10px;
+    font-size: 17px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+}
+
+.hoivien__table-add-input::placeholder {
+    color: #b3aeae;
+}
+.hoivien_addform label {
+    font-size: 20px;
+}
+.hoivien__table-add-input:focus,
+.hoivien__table-add-input-gioitinh {
+    border: 3px solid #2F528F;
+}
+.hoivien__table-add-input-gioitinh {
+    width: 37%;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+/* css của button thêm sửa xóa */
+.hoivien__table-add-btn {
+    float: right;
+    padding: 5px;
+    margin-top: 15px;
+    border: 3px solid #2F528F;
+    border-radius: 25px;
+    background-color: #daeaf3;
+    font-size: 16px;
+    font-weight: 600;
+}
+.hoivien__table-btn-huy {
+    margin-left: 10px;
+    background-color: red;
+}
+.hoivien_page {
+    margin-right: 5px;
 }
