--- a/view/assets/css/hoivien.css
+++ b/view/assets/css/hoivien.css
@@ -16,6 +16,16 @@
         transform: scale(1);
     }
 }
+@keyframes slide-in {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+}
 /* tim kiem hoi vien */
 .hoivien__search-view {
     width: calc(100% - 83%);
@@ -69,7 +79,11 @@
     cursor: pointer;
     border: 3px solid #2F528F;
 }
-
+.hoivien__search-btn.active {
+    background-color: #2F528F;
+    color: black;
+    border: none;
+ }
 .hoivien__search-btn:hover {
     background-color:  #2F528F;
 }
@@ -165,7 +179,7 @@ div tr.hoivien__table-view--title {
     background-color: lightblue;
     border-radius: 30px;
     border: 5px solid #2F528F;
-    animation: growth linear 0.2s;
+    animation: slide-in 1s forwards;
 }
 .hoivien__modal-popup-header {
     display: flex;
@@ -220,4 +234,9 @@ div tr.hoivien__table-view--title {
 }
 .hoivien_page {
     margin-right: 5px;
+}
+/* suc khoe hoi vien */
+.hoivien__table-health-view {
+    display: none;
+
 }
