--- a/view/assets/css/home.css
+++ b/view/assets/css/home.css
@@ -22,6 +22,7 @@
     margin-top: 30px;
     margin-right: 24px;
     float: right;
+    overflow: scroll;
 }
 
 .notice__text
@@ -29,6 +30,7 @@
     font-family: Arial, sans-serif;
     font-size: 20px;
     line-height: 1.5;
+    
 
 }
 
@@ -49,3 +51,8 @@
     opacity: 0.8;
 }
 
+.info--text
+{
+    margin-left: 25%;
+    font-size: 20px;
+}
