--- a/view/assets/css/bang_luong.css
+++ b/view/assets/css/bang_luong.css
@@ -7,12 +7,9 @@ html{
     clear: both;
 }
 
-li.menu-li.menu-li-nuoc {
-    background-color: rgb(68, 84, 106);
-}
 
 /* css của sắp xếp */
-select.tp__select {
+select.bl__select {
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -22,7 +19,37 @@ select.tp__select {
     border-radius: 10px;
     background-color: #daeaf3;
 }
-input.tp--sort {
+.bl__form--search {
+    margin-top: 1.5%;
+    margin-right: 275px;
+}
+
+button.bl__input--search {
+    border: none;
+    background: white;
+    color: blue;
+    font-size: 17px;
+}
+
+.bl__div--search--sort {
+    float: right;
+    display: flex;
+}
+
+.bl__input--search {
+    height: 31px;
+    border: none;
+}
+
+.bl__form__div--search {
+    border-bottom: 2px groove;
+}
+
+input.bl__input--search {
+    width: 219px;
+}
+
+input.bl--sort {
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -34,55 +61,55 @@ input.tp--sort {
 }
 
 /* CSS của hiển thị */
-.tp__div--hienthi{
+.bl__div--hienthi{
     margin-top: 30px;
     width: 100%;
     border: 1px solid white;
 }
 
-.tp__table_row--hienthi{
+.bl__table_row--hienthi{
     height: 30px;
 }
 
-div tr.tp__table--Tieu_de {
+div tr.bl__table--Tieu_de {
     background-color: #4472C4;
 
 }
-.tp__modal__div--popup{
+.bl__modal__div--popup{
     width: 100%;
 }
-table.tp__table--hienthi {
+table.bl__table--hienthi {
     color: black;
     margin-top: 12px;
     width: 100%;
 }
 
-.tp__table--hienthi tr:nth-child(even) {
+.bl__table--hienthi tr:nth-child(even) {
     background-color: #E9EBF5;
   }
 
-.tp__table--hienthi tr:nth-child(odd) {
+.bl__table--hienthi tr:nth-child(odd) {
     background-color: #CFD5EA;
 }
 
-.tp__table--hienthi tr th.tp__table--pass_tap {
+.bl__table--hienthi tr th.bl__table--pass_tap {
     border: 1px solid #2F528F;
     border-radius: 10px;
     font-size: 20px;
     border-width: 5px;
     padding: 2px;
 }
-.tp__table--hienthi tr th.tp__table--pass_tap a {
+.bl__table--hienthi tr th.bl__table--pass_tap a {
     color: black;
     width: 100%;
 }
 
-.tp__table--hienthi tr th.tp__table--pass {
+.bl__table--hienthi tr th.bl__table--pass {
     background-color: white;
 }
 
 /* them--popup */
-.tp__modal--popup {
+.bl__modal--popup {
     top: 0;
     position: fixed;
     right: 0;
@@ -95,23 +122,23 @@ table.tp__table--hienthi {
     display: none;
 }
 
-.tp__modal--popup--open{
+.bl__modal--popup--open{
     display: flex;
 }
-.tp__modal__div--popup {
+.bl__modal__div--popup {
     width: 500px;
     position: relative;
     background-color: lightblue;
     height: 400px;
     border-radius: 20px;
 }
-.tp__modal__div--u{  
+.bl__modal__div--u{  
     position: absolute;
     font-size: 22px;
     margin-left: 20px;
     top: 3%;
 }
-table.tp__table--addform {
+table.bl__table--addform {
     margin-top: 76px;
     margin-left: auto;
     margin-right: auto;
@@ -119,7 +146,7 @@ table.tp__table--addform {
     background-color: lightblue;
     
 }
-.tp__table--add-button{
+.bl__table--add-button{
     padding: 5px;
     border: 1px solid #2F528F;
     border-width: 3px;
@@ -130,15 +157,15 @@ table.tp__table--addform {
     float: right;
     margin-top: 12px;
 }
-.tp__table--button_huy{
+.bl__table--button_huy{
     background-color: red;
 }
-.tp__table--add_input{
+.bl__table--add_input{
     height: 20px;
 }
 
 /* css của button thêm sửa xóa */
-.tp__div--button{
+.bl__div--button{
 
     padding: 5px;
     border: 1px solid #2F528F;
@@ -149,68 +176,40 @@ table.tp__table--addform {
    
 }
 
-.tp__div--chua_button{
+.bl__div--chua_button{
     position: fixed;
     bottom: 0;
     right: 0;
 }
-.tp__div--button_xoa{
+.bl__div--button_xoa{
     margin-right: 30px;
     background-color: red;
 }
 
-input.tp--page {
+input.bl--page {
     margin-left: 5px;
 }
 
-.tp__div--tap {
+.bl__div--tap {
     display: flex;
     margin-left: 7%;
 }
 
-li.nuoc__div {
+li.bl__div {
     border: 1px solid #2F528F;
     border-radius: 10px;
     font-size: 20px;
     border-width: 5px;
-    padding: 2px;
+    padding: 2px; 
     margin-right: 5px;
 }
-
-.tp__div--tnuoc{
-    background-color: #daeaf3;
-}
-.tp__div--ttpcn{
+.bl__div--bl{
     background-color: rgb(68, 84, 106);
 }
+.bl__div--tdd{
+    background-color: #daeaf3;
+}
 
-.tp__form--page{
+.bl__form--page{
     margin-top: 5px;
-}
-
-.tp__div--search--sort {
-    float: right;
-    display: flex;
-}
-
-.tp__form--search {
-    margin-top: 1.5%;
-    margin-right: 275px;
-}
-
-.tp__form__div--search {
-    border-bottom: 2px groove;
-}
-.tp__input--search {
-    height: 31px;
-    border: none;
-}
-input.tp__input--search {
-    width: 219px;
-}
-button.tp__input--search {
-    border: none;
-    background: white;
-    color: blue;
-    font-size: 17px;
 }
