--- a/view/assets/css/style.css
+++ b/view/assets/css/style.css
@@ -50,7 +50,7 @@ a{
 
 .menu{
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     padding: 0px 60px;
     background-color: rgb(132, 151, 176);
