--- a/view/assets/css/nhanvien.css
+++ b/view/assets/css/nhanvien.css
@@ -52,6 +52,8 @@
 
 .nhanvien__search-input {
     display: flex;
+    float: left;
+    margin-right: 550px;
 }
 
 .nhanvien__search-input input[type="text"] {
@@ -75,7 +77,7 @@
     padding: 10px 20px;
     border-radius: 30px;
     transition: 0.3s;
-    margin: 20px 35px;
+    margin: 64px 35px;
     cursor: pointer;
     border: 3px solid #2F528F;
 }
@@ -83,7 +85,7 @@
     background-color: #2F528F;
  }
 .nhanvien__search-btn:hover {
-    background-color:  #2F528F;
+    background-color:  #d7e2f6;
 }
 /* bang hoi vien */
 .nhanvien__table {
@@ -238,4 +240,29 @@ div tr.nhanvien__table-view--title {
 .nhanvien__table-health-view {
     display: none;
     width: 100%;
+}
+
+.nhanvien--option
+{
+  border: 2px solid rgb(128, 119, 246);
+  width: 100%;
+  height: 100px;
+  background-color: rgb(165, 183, 243);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+ul
+{
+    padding: 0;
+}
+
+.nhanvien--option__luong
+{
+    border-bottom-left-radius: 18px;
+    border-bottom-right-radius: 18px;
 }
