--- a/view/assets/css/class.css
+++ b/view/assets/css/class.css
@@ -178,6 +178,7 @@ table.class_table-addform {
 
 .class_table-add_input{
     height: 20px;
+    width: 169px;
 }
 
 /* css của button thêm sửa xóa */
