cthem ơ tbl_lop

--- a/view/assets/css/lop.css
+++ b/view/assets/css/lop.css
@@ -181,7 +181,7 @@ table.lop_table-addform {
     background-color: red;
 }
 
-.lop_table-add_input{
+.lop_table-add-input{
     height: 20px;
     width: 169px;
 }
