--- a/view/assets/css/personal.css
+++ b/view/assets/css/personal.css
@@ -39,6 +39,7 @@ button.personal_input-search {
 }
 
 .personal_div-search-sort {
+    margin-bottom: 7px;
     display: flex;
 }
 
@@ -70,7 +71,7 @@ input.personal_input-search {
     text-align: center;
     margin-left: 47px;
     height: 450px;
-    margin-top: 49px;
+    margin-top: 59px;
     width: 13%;
     border: 3px solid rgb(7, 17, 21);
     border-radius: 25px;
@@ -84,6 +85,14 @@ input.personal_input-search {
     border: 1px solid white;
 }
 
+.personal_table-hienthi{
+    border-top: 5px solid rgb(80, 118, 243);
+    border-left: 5px solid rgb(60, 92, 198);
+    border-right: 5px solid rgb(44, 67, 145);
+    border-bottom: 5px solid rgb(19, 29, 61);
+    border-radius: 10px;
+}
+
 .personal_table_row-hienthi{
     height: 30px;
 }
@@ -91,6 +100,7 @@ input.personal_input-search {
 .personal_modal_div-popup{
     width: 100%;
 }
+
 table.personal_table-hienthi {
     color: black;   
     width: 100%;
@@ -236,6 +246,7 @@ li.personal_div {
 }
 
 .personal_form-page{
+    margin-left: 220px;
     cursor: pointer;
-    margin-top: 5px;
+    margin-top: 10px;
 }
