--- a/view/assets/css/personal.css
+++ b/view/assets/css/personal.css
@@ -71,7 +71,7 @@ input.personal_input-search {
     text-align: center;
     margin-left: 47px;
     height: 450px;
-    margin-top: 59px;
+    margin-top: 30px;
     width: 13%;
     border: 3px solid rgb(7, 17, 21);
     border-radius: 25px;
@@ -80,7 +80,7 @@ input.personal_input-search {
 .personal_div-hienthi2{
     text-align: center;
     margin-left: 62px;
-    margin-top: 14px;
+    margin-top: -13px;
     width: 76%;
     border: 1px solid white;
 }
@@ -249,4 +249,11 @@ li.personal_div {
     margin-left: 220px;
     cursor: pointer;
     margin-top: 10px;
+}
+
+i.fa-solid.fa-arrow-left {
+    cursor: pointer;
+    font-size: 33px;
+    color: blue;
+    margin-left: 10px;
 }
