--- a/view/assets/css/style.css
+++ b/view/assets/css/style.css
@@ -15,7 +15,7 @@ a{
 
 .active{
     cursor: pointer;
-    background-color: rgb(158, 166, 177);
+    /* background-color: rgb(158, 166, 177); */
 }
 
 .information{
