--- a/view/assets/css/nhanvien.css
+++ b/view/assets/css/nhanvien.css
@@ -29,7 +29,7 @@
 /* tim kiem hoi vien */
 .nhanvien__search-view {
     width: calc(100% - 83%);
-    height: 67.1vh;
+    height: 100.5%;
     border: 4px solid #2F528F;
     border-radius: 20px;
     float: left;
