--- a/view/assets/css/thucPham.css
+++ b/view/assets/css/thucPham.css
@@ -210,6 +210,7 @@ li.nuoc__div {
 }
 input.tp__input--search {
     width: 219px;
+    outline: none;
 }
 button.tp__input--search {
     border: none;
