--- a/view/assets/css/dung_cu_tap.css
+++ b/view/assets/css/dung_cu_tap.css
@@ -13,6 +13,7 @@ li.menu-li.menu-li-csvc {
 
 /* css của sắp xếp */
 select.dct__select {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -28,6 +29,7 @@ select.dct__select {
 }
 
 button.dct__input--search {
+    cursor: pointer;
     border: none;
     background: white;
     color: blue;
@@ -54,6 +56,7 @@ input.dct__input--search {
 }
 
 input.dct--sort {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -173,7 +176,7 @@ table.dct__table--addform {
 
 /* css của button thêm sửa xóa */
 .dct__div--button{
-
+    cursor: pointer;
     padding: 5px;
     border: 1px solid #2F528F;
     border-width: 5px;
