--- a/view/assets/css/nuoc.css
+++ b/view/assets/css/nuoc.css
@@ -13,6 +13,7 @@ li.menu-li.menu-li-nuoc {
 
 /* css của sắp xếp */
 select.nuoc__select {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -24,6 +25,7 @@ select.nuoc__select {
 }
 
 input.nuoc--sort {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -142,7 +144,7 @@ table.nuoc__table--addform {
 
 /* css của button thêm sửa xóa */
 .nuoc__div--button{
-
+    cursor: pointer;
     padding: 5px;
     border: 1px solid #2F528F;
     border-width: 5px;
@@ -212,6 +214,7 @@ input.nuoc__input--search {
     outline: none;
 }
 button.nuoc__input--search {
+    cursor: pointer;
     border: none;
     background: white;
     color: blue;
