--- a/view/assets/css/thucPham.css
+++ b/view/assets/css/thucPham.css
@@ -13,6 +13,7 @@ li.menu-li.menu-li-nuoc {
 
 /* css của sắp xếp */
 select.tp__select {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -23,6 +24,7 @@ select.tp__select {
     background-color: #daeaf3;
 }
 input.tp--sort {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 30px;
     padding: 5px;
@@ -142,7 +144,7 @@ table.tp__table--addform {
 
 /* css của button thêm sửa xóa */
 .tp__div--button{
-
+    cursor: pointer;
     padding: 5px;
     border: 1px solid #2F528F;
     border-width: 5px;
@@ -213,6 +215,7 @@ input.tp__input--search {
     outline: none;
 }
 button.tp__input--search {
+    cursor: pointer;
     border: none;
     background: white;
     color: blue;
