--- a/view/assets/css/skkm.css
+++ b/view/assets/css/skkm.css
@@ -101,7 +101,7 @@ div tr.sk__table-view--title {
 }
 /* header menu */
 .sk__menu-header {
-    list-style-type: none;
+    list-style-type: none;  
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -128,4 +128,8 @@ div tr.sk__table-view--title {
   
 .sk__menu-header li a.small {   
     opacity: 0.5;
+}
+
+li.menu-li.menu-li-su-kien {
+    background-color: rgb(68, 84, 106);
 }
